# vk-archive-parser

./: .gitignore  Cargo.toml  README.md  format.txt  plot.gp  some_experiments.md  utils.sh
src/: VkChat.rs  main.rs  vk_chat.rs
