[package]
name = "vk-archive-parser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.2"
chrono = "0.4.26"
indicatif = { version = "0.17.5", features = ["rayon"] }
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tl = { version = "0.7.7", features = ["simd"] }

[profile.release]
debug = true
# lto = true
