[package]
name = "vk-archive-parser"
version = "0.6.0"
edition = "2021"
license = "MIT"

[dependencies]
aho-corasick = "1.0.2"
anyhow = "1.0.75"
chrono = "0.4.26"
encoding_rs = { version = "0.8.32"}
encoding_rs_io = "0.1.7"
indicatif = { version = "0.17.5", features = ["rayon"] }
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tl = { version = "0.7.7", features = ["simd"] }

[profile.release]
debug = true
# lto = true
